syntax="proto3";

package user;

option go_package = "github.com/uzmaW/go-first/grpc/proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name =1;
  string email =2; 
}

message CreateUserResponse {
  string id=1;
  string name=2;
  string email=3;
}

message GetUserRequest {
    string id=1;
}

message GetUserResponse {
    string id=1;
    string name=2;
    string email=3;
}